--- a/Assets/Plugins/ExcelDatabase/Editor/Manager/Manager.uxml
+++ b/Assets/Plugins/ExcelDatabase/Editor/Manager/Manager.uxml
@@ -1,3 +1,4 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/Plugins/ExcelDatabase/Editor/Manager/Manager.uss?fileID=7433441132597879392&amp;guid=e37081cf1c60a421e85db8b7960f1ba9&amp;type=3#Manager" />
     <ui:ListView />
 </ui:UXML>
