--- a/Assets/Plugins/ExcelDatabase/Editor/GUI/JsonEditor.uxml
+++ b/Assets/Plugins/ExcelDatabase/Editor/GUI/JsonEditor.uxml
@@ -1,10 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/Plugins/ExcelDatabase/Editor/GUI/JsonEditor.uss?fileID=7433441132597879392&amp;guid=14efa90fd30f34314a4e06a4833a9ed5&amp;type=3#JsonEditor" />
+    <Style src="project://database/Assets/Plugins/ExcelDatabase/Editor/GUI/Style.uss?fileID=7433441132597879392&amp;guid=aca61a8e049ed4506823fcf386c2daad&amp;type=3#Style" />
     <ui:GroupBox style="padding-right: 3px;">
-        <ui:Button text="Save" display-tooltip-when-elided="true" name="save-button" style="margin-left: 0; margin-right: 0;" />
+        <ui:Button text="Save" display-tooltip-when-elided="true" name="save-button" />
     </ui:GroupBox>
     <ui:VisualElement style="flex-direction: row;">
-        <ui:ListView name="id-list" class="list" />
-        <ui:ListView name="column-list" selection-type="None" class="list" />
+        <ui:ListView name="id-list" style="width: 50%;" />
+        <ui:ListView name="column-list" selection-type="None" style="width: 100%;" />
     </ui:VisualElement>
 </ui:UXML>
